# CiderDeck

./: .gitignore  CMakeLists.txt  ciderdeck.desktop
docs/: DESIGN-SYSTEM.md  ROADMAP.md  headset-tile-prompt.md
kwin-scripts/: ciderdeck-bridge.js
pkg/: PKGBUILD
src/: main.cpp
src/app/: CiderDeckApp.cpp  CiderDeckApp.h
src/models/: DeckConfig.cpp  DeckConfig.h  MonitorInfo.h  TileData.h  TileType.h
src/qml/: AppLauncherTile.qml  AudioMixerTile.qml  BrightnessTile.qml  Card.qml  CardButton.qml  ClipboardHistoryTile.qml  ClockDateTile.qml  CommandButtonTile.qml  ContextMenu.qml  DashboardPage.qml  EditOverlay.qml  GeneralSettings.qml  LucideIcon.qml  MarqueeText.qml  MediaPlayerTile.qml  MixerOverlay.qml  OverviewTile.qml  PageDots.qml  PageSwipeView.qml  ProcessManagerTile.qml  ScreenshotTile.qml  SettingsPanel.qml  SettingsRow.qml  ShowDesktopTile.qml  SystemMonitorTile.qml  TileLoader.qml  TileSettings.qml  TimerStopwatchTile.qml  Toast.qml  ToastStack.qml  VolumeTile.qml  WeatherTile.qml  main.qml  qml.qrc
src/resources/: icons.qrc
src/services/: AppIconProvider.cpp  AppIconProvider.h  AppLaunchManager.cpp  AppLaunchManager.h  AudioManager.cpp  AudioManager.h  AudioMixerService.cpp  AudioMixerService.h  BrightnessService.cpp  BrightnessService.h  ClipboardService.cpp  ClipboardService.h  CommandRunner.cpp  CommandRunner.h  EvdevTouchService.cpp  EvdevTouchService.h  KWinDBusClient.cpp  KWinDBusClient.h  MonitorManager.cpp  MonitorManager.h  MprisManager.cpp  MprisManager.h  ProcessManagerService.cpp  ProcessManagerService.h  ScreenshotService.cpp  ScreenshotService.h  SystemMonitorService.cpp  SystemMonitorService.h  ThemeManager.cpp  ThemeManager.h  TimerService.cpp  TimerService.h  WeatherService.cpp  WeatherService.h
src/viewmodels/: EditModeController.cpp  EditModeController.h  InstalledAppsModel.cpp  InstalledAppsModel.h  TileGridModel.cpp  TileGridModel.h  ToastModel.cpp  ToastModel.h
